AC_INIT([program], [0.1], [yukai])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_PROG_AR
AC_PROG_LIBTOOL
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
  common/Makefile
  MultiThreadSQLparser/Makefile 
  Network/Makefile
  SimpleThreadPool/Makefile 
  tset/Makefile 
  MemoryPool/Makefile
  readline/Makefile
])
AC_OUTPUT

