noinst_LIBRARIES = libcommand.a

libcommand_a_SOURCES = button.h 	check_button.h \
	command_test.cpp 				command_test.h \
	simple_command.h 				simple_command_runner.cpp \
	simple_command_runner.h 		simple_command_test.h \
	task.h 							task_runner.h 

	
AM_CPPFLAGS= -fPIC
	
AM_LDFLAGS =-lc -lm -lrt -lpthread